--- a/Integrakidsmobile/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Integrakidsmobile/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.integra_kids_mobile.ui.home.HomeFragment"
+        android:name="com.example.integra_kids_mobile.ui.jogos.Jogos"
         android:label="@string/title_games"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.integra_kids_mobile.ui.dashboard.DashboardFragment"
+        android:name="com.example.integra_kids_mobile.ui.perfil.Perfil"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.integra_kids_mobile.ui.notifications.NotificationsFragment"
+        android:name="com.example.integra_kids_mobile.ui.sobre.Sobre"
         android:label="@string/title_about"
         tools:layout="@layout/fragment_notifications" />
 </navigation>
