insert essential screens: - about screen (semi completed); - configuration screen (empty); - insert about informations and images

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/about"
         android:title="@string/title_about" />
 
+    <item
+        android:id="@+id/usuarioConfig"
+        android:icon="@drawable/gear"
+        android:title="@string/title_configuration" />
+
 </menu>
