--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="?attr/actionBarSize" >
+    android:background="@color/background"
+    android:paddingTop="0dp" >
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -30,6 +31,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation"
-    />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
