--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <resources>
     <style name="text_title">
-        <item name="android:textSize">20dp</item>
+        <item name="android:textSize">30dp</item>
         <item name="android:textColor">@color/text</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="PrimaryButton">
@@ -23,5 +24,14 @@
     <style name="BorderedButton" parent="Widget.AppCompat.Button">
         <item name="background">@drawable/border</item>
         <item name="android:textColor">@color/text</item>
+    </style>
+
+    <style name="AboutText" parent="Widget.AppCompat.Button">
+        <item name="android:backgroundTint">@color/background</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:justificationMode">inter_word</item>
+        <item name="android:fontFamily">Roboto</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:layout_marginVertical">20dp</item>
     </style>
 </resources>
