Screens Update: - create Game screen layout [70%]: --> needs add expand animation and start game button yet; --> add image background; --> add route to games in start button;
- fix border.xml bugs;
- add primary and secondary colors on pallete;
- create Profile Screen layout:
--> add route to profile actions in start button;

- add initial action from user_configs(acessibility);

--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -1,10 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.perfil.Perfil" >
+    tools:context=".ui.perfil.Perfil">
 
+    <Button
+        android:id="@+id/btnProfile1"
+        style="@style/GameButton"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:background="@drawable/border"
+        android:text="Editar perfil"
+        app:backgroundTint="@color/red"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <Button
+        android:id="@+id/btnProfile"
+        style="@style/GameButton"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:background="@drawable/border"
+        android:text="Cadastrar Criança"
+        app:backgroundTint="@color/green"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
+
+    <Button
+        android:id="@+id/btnProfile2"
+        style="@style/GameButton"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:background="@drawable/border"
+        android:text="Editar Criança"
+        app:backgroundTint="@color/yellow"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <Button
+        android:id="@+id/btnProfile3"
+        style="@style/GameButton"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:background="@drawable/border"
+        android:text="Resultados"
+        app:backgroundTint="@color/purple"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
+    <Button
+        android:id="@+id/btnProfile4"
+        style="@style/GameButton"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:background="@drawable/border"
+        android:text="Trocar Jogador"
+        app:backgroundTint="@color/blue"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
+
+    <Button
+        android:id="@+id/btnProfile5"
+        style="@style/GameButton"
+        android:layout_width="175dp"
+        android:layout_height="200dp"
+        android:background="@drawable/border"
+        android:text="Fazer Logout"
+        app:backgroundTint="@color/orange"
+        app:cornerRadius="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Perfil"
+        style="@style/text_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.07" />
 </androidx.constraintlayout.widget.ConstraintLayout>
