--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="android:textAlignment">center</item>
     </style>
 
+    <style name="text_enun">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:justificationMode">inter_word</item>
+    </style>
+
     <style name="PrimaryButton">
         <item name="android:backgroundTint">@color/tint</item>
         <item name="android:textColor">@color/background</item>
@@ -20,13 +26,21 @@
         <item name="android:padding">0dp</item>
     </style>
 
-    <!-- não funfa por enquanto -->
+    <!-- não funfa -->
     <style name="BorderedButton" parent="Widget.AppCompat.Button">
         <item name="background">@drawable/border</item>
-        <item name="android:textColor">@color/text</item>
+        <item name="android:textColor">@color/background</item>
     </style>
 
-    <style name="AboutText" parent="Widget.AppCompat.Button">
+    <style name="GameButton" parent="Widget.AppCompat.Button">
+        <item name="android:paddingVertical">50dp</item>
+        <item name="android:state_pressed">true</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20dp</item>
+    </style>
+
+    <style name="AboutText" parent="Widget.AppCompat.TextView">
         <item name="android:backgroundTint">@color/background</item>
         <item name="android:textColor">@color/text</item>
         <item name="android:justificationMode">inter_word</item>
