--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.perfil.Perfil">
+    tools:context=".ui.views.perfil.PerfilScreen">
 
     <Button
         android:id="@+id/btnProfile1"
