--- a/app/src/main/res/layout/jogos.xml
+++ b/app/src/main/res/layout/jogos.xml
@@ -85,11 +85,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
-        app:backgroundTint="@color/background"
+        app:backgroundTint="@color/tint"
         app:cornerRadius="16dp"
         android:orientation="vertical"
         android:layout_marginHorizontal="20dp"
-        android:padding="20dp"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -110,7 +110,7 @@
             android:layout_width="300dp"
             android:layout_gravity="center"
             android:layout_height="300dp"
-            android:layout_marginVertical="30dp"
+            android:layout_marginVertical="10dp"
             tools:src="@tools:sample/avatars" />
 
         <TextView
@@ -123,7 +123,7 @@
         <TextView
             android:id="@+id/textGameDescribe"
             style="@style/text_enun"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Descrição" />
@@ -133,7 +133,7 @@
             style="@style/PrimaryButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Jogar jogo" />
+            android:text="Iniciar" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
